# sdlwrapper

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
cmake/: FindSDL2.cmake
include/: sdlwrapper.hpp
include/sdlwrapper/: audio.hpp  game_controller.hpp  gl_context.hpp  sdl.hpp  sdl_error.hpp  window.hpp
include/sdlwrapper/detail/: audio_sample_type.hpp
test/: audio.cpp  game_controller.cpp  sdl.cpp
